--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-nada ainda
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>treinando</title>
+    </head>
+    <body>
+        <h1>oi</h1>
+    </body>
+</html>
