--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>treinando</title>
     </head>
     <body>
-        <h1>oi</h1>
+        <h1>os gatos da casa</h1>
+        <p class="Billy"><strong>Billy</strong></p>
+        <p class="Kakashi"><strong>Kakashi</strong></p>
+        <p class="Paçoca"><strong>Paçoca</strong></p>
+        <p class="Kit"><strong>Kit</strong></p>
+        <img src="" alt="">
+        <script src="./lógica.js"></script>
+
     </body>
-</html>
+    </html>
+
+
+
+
